# zmp_eval

./: README.md  requirements.txt
ground_plane/: CMakeLists.txt  p_c.pcd
ground_plane/include/ground_plane/: ground_plane.h
ground_plane/src/: ground_plane.cpp
scripts/: json_manip.py  json_manip.sh  suffix.py
scripts/json_data/: 1.json  10.json  2.json  4.json  5.json  6.json  8.json
scripts/tests/: test_json_manip.py  test_suffix.py
